# OpenCVDemo

./: .gitignore  import-summary.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xgn/opencvdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/xgn/opencvdemo/: MainActivity.java  Puzzle15Activity.java  Puzzle15Processor.java
app/src/main/java/com/xgn/opencvdemo/cameracalibration/: CalibrationResult.java  CameraCalibrationActivity.java  CameraCalibrator.java  OnCameraFrameRender.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xgn/opencvdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVSample15puzzle/: build.gradle
openCVSample15puzzle/src/main/java/org/opencv/samples/puzzle15/: Puzzle15Activity.java
openCVSamplecolorblobdetection/: build.gradle
openCVSamplefacedetection/: build.gradle
openCVSampleimagemanipulations/: build.gradle
openCVTutorial1CameraPreview/: build.gradle
openCVTutorial2MixedProcessing/: build.gradle
openCVTutorial3CameraControl/: build.gradle
